ags (0.7.78)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_file_write() to have additional format parameter
	* fixed potential NULL pointer in ags_audio_file_write()

ags (0.7.77)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsCellPattern to shrink vertical scrollbar in AgsMatrix
	* fixed AgsMidiDialog reset
	* improved clear JACK buffer during no playback

ags (0.7.76)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed sample selection of AgsIpatch
	* improved open multi-channel samples in ags_ffplayer_callbacks.c

ags (0.7.75)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed synth generator
	* fixed ags_recall_find_all_type()

ags (0.7.74)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_midi_buffer_util_put_varlength() to encode multi-byte properly
	* reverted AgsThread frequency
	* added additional parameter to ags_ladspa_manager.c to pass instance
	* added additional parameter to ags_dssi_manager.c to pass instance
	* added additional parameter to ags_lv2_manager.c to pass instance
	* added additional parameter to ags_lv2ui_manager.c to pass instance
	* improved AgsFFPlayer to resize audio channels
	* fixed relevant clang scan-build errors

ags (0.7.73)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed removed types of libags_gui.types of gtkdoc
	* fixed return value to be void * of ags_stream_alloc()
	* fixed ags_audio_set_pads() to shrink correctly
	* improved ags_recycling_create_audio_signal_with_frame_count() to reduce overhead
	* improved JACK synchronization

ags (0.7.72)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed configuration

ags (0.7.71)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restore JACK from file

ags (0.7.70)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed most compiler warnings

ags (0.7.69)
